--- a/templates/acc/index.html
+++ b/templates/acc/index.html
@@ -2,9 +2,11 @@
 {% block con %}
 
     <div class="p-5 mb-4 bg-light rounded-3">
-        <div class="container-fluid py-5">
+        <div class="container-fluid py-5 text-center">
             <h1 class="display-5 fw-bold">WELCOME TO MY WEBSITE!</h1>
-            <p class="col-md-8 fs-4">HEELO EVERYONE! MY FRIST DJANGO PROJECT!!@@!@!!@!@</p>
+        </div>
+        <div class="text-center">
+            <p class="fs-4">HELLO EVERYONE! MY FRIST DJANGO PROJECT!</p>
         </div>
     </div> 
 
