--- a/templates/board/index.html
+++ b/templates/board/index.html
@@ -4,20 +4,20 @@
     
 
     <div class="container mt-5 mb-5">
-        <h1><b>SH BOARD</b></h1> 
+        <h1><b>커뮤니티</b></h1> 
 
         <div class="text-end">
-            <a class="btn btn-dark" href="{% url 'board:create' %}">WIRTE</a>
+            <a class="btn btn-dark" href="{% url 'board:create' %}">작성하기</a>
         </div>
 
         <table class="table table-hover mt-4">
             <thead>
                 <tr class="table-dark">
-                    <th scope="col">NO</th>
-                    <th scope="col">SUBJECT</th>
-                    <th scope="col">WRITER</th>
-                    <th scope="col">SUMMARY</th>
-                    <th scope="col">LIKEY</th>
+                    <th scope="col">번호</th>
+                    <th scope="col">제목</th>
+                    <th scope="col">작성자</th>
+                    <th scope="col">내용</th>
+                    <th scope="col">좋아요</th>
                 </tr>
             </thead>
             <tbody>
