--- a/templates/vote/detail.html
+++ b/templates/vote/detail.html
@@ -3,7 +3,7 @@
 
     {% load mathfilters %}
 
-    <dic class="container mt-5 mb-5">
+    <div class="container mt-5 mb-5">
         <h1><b>{{ t.subject }}</b></h1>
 
         <div class="row mt-5">
@@ -53,14 +53,39 @@
                         </div>
                     {% endfor %}
                 </div>
-                <div class="text-end mt-4 ">
+                <div class="text-end mt-4 mb-4">
                     <button class="btn btn-dark btn-lg">투표하기</button>
                     <a href="{% url 'vote:index' %}" class="btn btn-dark btn-lg">뒤로가기</a>
                 </div>
             </form>
         {% endif %}
-    </dic>
 
+        {% if t.maker == user %}                  
+            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                DEL
+            </button> 
+        {% endif %}
+    </div>
+
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">게시글 삭제 알림창</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    정말 삭제하시겠습니까?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+                    <a href="{% url 'vote:delete' t.id %}" type="button" class="btn btn-danger">삭제하기</a>
+                </div>
+            </div>
+        </div>
+    </div>
+      
 
 
 
