--- a/templates/acc/profile.html
+++ b/templates/acc/profile.html
@@ -14,7 +14,7 @@
                 <input type="text" value="{{user}}" disabled class="form-control">
 
                 <label class="form-label mt-4 ">POINT</label>
-                <input type="text" value="{{user.point}} p" disabled class="form-control">
+                <input type="text" value="{{user.point}}" disabled class="form-control">
 
                 <label class="form-label mt-4">EMAIL</label>
                 <input type="text" value="{{user.email}}" disabled class="form-control">
@@ -26,7 +26,7 @@
 
         <div class="text-end mt-5">
             <a href="{% url 'acc:update' %}" class="btn btn-dark btn-lg">정보수정</a>
-            <button type="button" class="btn btn-danger bng-lg" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <button type="button" class="btn btn-danger btn-lg" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 계정삭제
             </button>
         </div>
