--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <body>
         {% if user.is_authenticated %}
         <!-- 인증된 사용자 메뉴바 -->
-            <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(0, 0, 0);">
+            <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: yellow;">
                 <div class="container-fluid">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -18,28 +18,28 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="{% url 'acc:index' %}">HOME</a>
+                                <a class="nav-link active btn btn-dark" aria-current="page" href="{% url 'acc:index' %}">메인화면</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="{% url 'board:index' %}">BOARD</a>
+                                <a class= " nav-link active btn btn-dark" aria-current="page" href="{% url 'board:index' %}">커뮤니티</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="{% url 'vote:index' %}">VOTE</a>
+                                <a class= "nav-link active btn btn-dark" aria-current="page" href="{% url 'vote:index' %}">투표소</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="{% url 'trans:index' %}">TRANS</a>
+                                <a class="nav-link active btn btn-dark" aria-current="page" href="{% url 'trans:index' %}">번역기</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="{% url 'tts:index' %}">TTS</a>
+                                <a class="nav-link active btn btn-dark" aria-current="page" href="{% url 'tts:index' %}">음성 번역</a>
                             </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <li class="nav-item dropdown ">
+                                <a class="nav-link dropdown-toggle btn btn-dark" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     {{ user }}
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="{% url 'acc:profile' %}">PROFILE</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'acc:profile' %}">프로필</a></li>
                                     <li><hr class="dropdown-divider"></li>
-                                    <li><a class="dropdown-item" href="{% url 'acc:logout' %}">LOGOUT</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'acc:logout' %}">로그아웃</a></li>
                             </li>
 
                         </ul>
@@ -48,7 +48,7 @@
             </nav>
         {% else %}
         <!-- 익명의 사용자 메뉴바 -->
-            <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(0, 0, 0);">
+            <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: yellow;">
                 <div class="container-fluid">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -56,13 +56,13 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="{% url 'acc:index' %}">HOME</a>
+                                <a class="nav-link active btn btn-dark" aria-current="page" href="{% url 'acc:index' %}">메인화면</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="{% url 'acc:login' %}">LOGIN</a>
+                                <a class="nav-link active btn btn-dark" aria-current="page" href="{% url 'acc:login' %}">로그인</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="{% url 'acc:signup' %}">SIGNUP</a>
+                                <a class="nav-link active btn btn-dark" aria-current="page" href="{% url 'acc:signup' %}">회원가입</a>
                             </li>
                         </ul>
                     </div>
@@ -81,9 +81,6 @@
         {% block con %}
 
         {% endblock %}
-        disgust5678@gmail.com
-        Ydh1210!
-        YDH1210
         
 
         <style>
