--- a/templates/board/detail.html
+++ b/templates/board/detail.html
@@ -20,17 +20,17 @@
         </div>
 
         <div class="text-end mt-5">
-            <a href="{% url 'board:index' %}" class="btn btn-dark">HOME</a>
+            <a href="{% url 'board:index' %}" class="btn btn-dark">홈</a>
             {% if user in b.likey.all %}
-                <a href="{% url 'board:cancel' b.id %}" class="btn btn-danger">CANCEL</a>
+                <a href="{% url 'board:cancel' b.id %}" class="btn btn-danger">취소</a>
             {% else %}
-                <a href="{% url 'board:likey' b.id %}" class="btn btn-primary">LIEKY</a>
+                <a href="{% url 'board:likey' b.id %}" class="btn btn-primary">좋아요</a>
             {% endif %}
 
             {% if b.writer == user %}
-                <a href="{% url 'board:update' b.id %}" class="btn btn-secondary">MOD</a>                   
+                <a href="{% url 'board:update' b.id %}" class="btn btn-secondary">게시글 수정</a>                   
                 <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                    DEL
+                    삭제
                 </button> 
             {% endif %}
                 
@@ -51,7 +51,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
-                    <a href="{% url 'board:delete' b.id %}" type="button" class="btn btn-danger">삭제하기</button>
+                    <a href="{% url 'board:delete' b.id %}" type="button" class="btn btn-danger">삭제하기</a>
                 </div>
             </div>
         </div>
