--- a/templates/trans/index.html
+++ b/templates/trans/index.html
@@ -16,7 +16,7 @@
                 <div class="col-sm-2 text-center" style="margin: auto;">
                     <select class="form-select" name="fr">
                         {% for code, name in ndict.items %}
-                            <option value="{{code}}" {% if fr %}{% if fr == code %} selected {% endif %}{% else %}{% if code == 'en' %} selected {% endif %}{% endif %}>{{ name|upper }}</option>
+                            <option value="{{code}}" {% if fr %}{% if fr == code %} selected {% endif %}{% else %}{% if code == 'ko' %} selected {% endif %}{% endif %}>{{ name|upper }}</option>
                         {% endfor %}
 
                     </select>
@@ -26,7 +26,7 @@
                     
                     <select class="form-select" name="to">
                         {% for code, name in ndict.items %}
-                            <option value="{{code}}" {% if to %}{% if to == code %} selected {% endif %}{% else %}{% if code == 'ko' %} selected {% endif %}{% endif %}>{{ name|upper }}</option>
+                            <option value="{{code}}" {% if to %}{% if to == code %} selected {% endif %}{% else %}{% if code == 'en' %} selected {% endif %}{% endif %}>{{ name|upper }}</option>
                         {% endfor %}                                               
                     </select>
 
@@ -40,6 +40,6 @@
         </form>
     </div>
 
-    <a href="/media/noimage.png" download>다운로드</a>
+    <a href="/media/noimage.png" class="btn btn-dark" download>다운로드</a>
 
 {% endblock %}
