--- a/templates/tts/index.html
+++ b/templates/tts/index.html
@@ -3,7 +3,7 @@
     <form method="post">
         {% csrf_token %}
         <div class="container mt-5 mb-5">
-            <h1><b>TTS 서비스</b></h1>
+            <h1><b>음성 번역 서비스</b></h1>
             
             <textarea class="form-control mt-4" name="bf" style="height: 250px;" placeholder="변환할 문장을 입력하세요">{{bf}}</textarea>
 
@@ -17,11 +17,11 @@
                     </select>
                 </div>
                 <div class="col-sm-4">
-                    <input type="text" class="form-control" value="{{fname}}" name="fname" placeholder="INPUT FILENAME">
+                    <input type="text" class="form-control" value="{{fname}}" name="fname" placeholder="파일 이름을 입력하세요.">
                 </div>
                 <div class="col-sm-2">
                     <button class="btn btn-dark" style="width: 100%;">변환</button>
-                
+                                
                 </div>
                 <div class="col-sm-2">
                     <a href="/media/{{fname}}.mp3" class="btn btn-dark" style="width: 100%;" download>다운로드</a>
